--- a/capstone.html
+++ b/capstone.html
@@ -12,24 +12,17 @@
         		<li><a href="https://github.com/zcchew1202">Zi</a></li>
     		</ul>
 			<h2>Description</h2>
-			<p>The goal of the project was to explore how well Machine Learning techniques can regenerate data lost through JPEG image compression. It was completed as part of our final year design project requirements. 
+			<p>The goal of the project was to explore how well Machine Learning techniques can regenerate data lost through JPEG image compression.<br>
+			It was completed as part of our final year design project requirements. We were able to evaluate two Machine Learning models, a Generative <br>
+			Adversarial Network (GAN) and a Convolutional Neural Network (CNN). The GAN model exhibited better performance, and was selected as the final model. 
 
-We were able to evaluate two Machine Learning models, a Generative Adversarial Network (GAN) and a Convolutional Neural Network (CNN). The GAN model exhibited better performance, and was selected as the final model. 
-
-For the ECE 2018 Design Fair, we developed an Android app that took portrait images of people, compressed them and displayed the regenerated image on different screens. 
-</p>
+			For the ECE 2018 Design Fair, we developed an Android app that took portrait images of people, compressed them and displayed the regenerated image on different screens.</p>
 		<ul>
-        		<li><a href="https://github.com/kaushikg94">Gokul</a></li>
-	        	<li><a href="https://github.com/Rifdhan">Rifdhan</a></li>
+        		<li><a href="">GAN Model</a></li>
+	        	<li><a href="https://github.com/Rifdhan">CNN Model</a></li>
         		<li><a href="https://github.com/Nothingtop">Henry</a></li>
-        		<li><a href="https://github.com/zcchew1202">Zi</a></li>
     		</ul>
+			<img src=PosterMain.jpg/>
 		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
 	</body>
 </html>
