--- a/capstone.html
+++ b/capstone.html
@@ -22,7 +22,7 @@
 	        	<li><a href="https://github.com/Rifdhan">CNN Model</a></li>
         		<li><a href="https://github.com/Nothingtop">Henry</a></li>
     		</ul>
-			<img src=PosterMain.jpg/>
+			<img src=PosterMain.jpg>
 		</nav>
 	</body>
 </html>
