--- a/capstone.html
+++ b/capstone.html
@@ -17,12 +17,13 @@
 			Adversarial Network (GAN) and a Convolutional Neural Network (CNN). The GAN model exhibited better performance, and was selected as the final model. 
 
 			For the ECE 2018 Design Fair, we developed an Android app that took portrait images of people, compressed them and displayed the regenerated image on different screens.</p>
+			<img src="https://hengyuechen.github.io/PosterMain.jpg" align="middle">
 		<ul>
-        		<li><a href="">GAN Model</a></li>
-	        	<li><a href="https://github.com/Rifdhan">CNN Model</a></li>
-        		<li><a href="https://github.com/Nothingtop">Henry</a></li>
+        		<li><a href="https://github.com/Rifdhan/image_data_regeneration_gan">GAN Model Repository</a></li>
+	        	<li><a href="https://github.com/Rifdhan">CNN Model Repository</a></li>
+        		<li><a href="https://hengyuechen.github.io/FinalReport.pdf">Project Final Report</a></li>
     		</ul>
-			<img src=PosterMain.jpg>
+			
 		</nav>
 	</body>
 </html>
