--- a/capstone.html
+++ b/capstone.html
@@ -17,10 +17,10 @@
 			Adversarial Network (GAN) and a Convolutional Neural Network (CNN). The GAN model exhibited better performance, and was selected as the final model. 
 
 			For the ECE 2018 Design Fair, we developed an Android app that took portrait images of people, compressed them and displayed the regenerated image on different screens.</p>
-			<img src="https://hengyuechen.github.io/PosterMain.jpg" align="middle">
+			<img src="https://hengyuechen.github.io/PosterMain.jpg" align="middle" height=500 width=800>
 		<ul>
         		<li><a href="https://github.com/Rifdhan/image_data_regeneration_gan">GAN Model Repository</a></li>
-	        	<li><a href="https://github.com/Rifdhan">CNN Model Repository</a></li>
+	        	<li><a href="https://github.com/hengyuechen/ECE496">CNN Model Repository</a></li>
         		<li><a href="https://hengyuechen.github.io/FinalReport.pdf">Project Final Report</a></li>
     		</ul>
 			
