--- a/capstone.html
+++ b/capstone.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="https://hengyuechen.github.io/project_styles.css" />
 		<title>Image Data Regeneration Using Machine Learning</title>
 	</head>
 	<body>
 		<nav>
-    		<ul>
+    		<ul class="horizontal_ul">
         		<li><a href="https://github.com/kaushikg94">Gokul</a></li>
 	        	<li><a href="https://github.com/Rifdhan">Rifdhan</a></li>
         		<li><a href="https://github.com/Nothingtop">Henry</a></li>
         		<li><a href="https://github.com/zcchew1202">Zi</a></li>
     		</ul>
+		<div class="centre">
 			<h2>Description</h2>
 			<p>The goal of the project was to explore how well Machine Learning techniques can regenerate data lost through JPEG image compression.<br>
 			It was completed as part of our final year design project requirements. We were able to evaluate two Machine Learning models, a Generative <br>
@@ -23,7 +25,7 @@
 	        	<li><a href="https://github.com/hengyuechen/ECE496">CNN Model Repository</a></li>
         		<li><a href="https://hengyuechen.github.io/FinalReport.pdf">Project Final Report</a></li>
     		</ul>
-			
+			</div>
 		</nav>
 	</body>
 </html>
