--- a/capstone.html
+++ b/capstone.html
@@ -12,7 +12,7 @@
         		<li><a href="https://github.com/Nothingtop">Henry</a></li>
         		<li><a href="https://github.com/zcchew1202">Zi</a></li>
     		</ul>
-		<div class="centre">
+		<div class="center">
 			<h2>Description</h2>
 			<p>The goal of the project was to explore how well Machine Learning techniques can regenerate data lost through JPEG image compression.<br>
 			It was completed as part of our final year design project requirements. We were able to evaluate two Machine Learning models, a Generative <br>
