--- a/capstone.html
+++ b/capstone.html
@@ -5,19 +5,20 @@
 		<title>Image Data Regeneration Using Machine Learning</title>
 	</head>
 	<body>
+		<h1 align="middle">Image Data Regeneration Using Machine Learning</h1>
 		<nav>
     		<ul class="horizontal_ul">
-        		<li><a href="https://github.com/kaushikg94">Gokul</a></li>
-	        	<li><a href="https://github.com/Rifdhan">Rifdhan</a></li>
-        		<li><a href="https://github.com/Nothingtop">Henry</a></li>
-        		<li><a href="https://github.com/zcchew1202">Zi</a></li>
+        		<li class="left_li"><a href="https://github.com/kaushikg94">Gokul</a></li>
+	        	<li class="left_li"><a href="https://github.com/Rifdhan">Rifdhan</a></li>
+        		<li class="left_li"><a href="https://github.com/hengyuechen">Henry</a></li>
+        		<li class="left_li"><a href="https://github.com/zcchew1202">Zi</a></li>
     		</ul>
+		</nav>
 		<div class="center">
-			<h2>Description</h2>
-			<p>The goal of the project was to explore how well Machine Learning techniques can regenerate data lost through JPEG image compression.<br>
-			It was completed as part of our final year design project requirements. We were able to evaluate two Machine Learning models, a Generative <br>
-			Adversarial Network (GAN) and a Convolutional Neural Network (CNN). The GAN model exhibited better performance, and was selected as the final model. 
-
+			<h2 align="left">Description</h2>
+			<p>The goal of the project was to explore how well Machine Learning techniques can regenerate data lost through JPEG image compression.
+			It was completed as part of our final year design project requirements. We were able to evaluate two Machine Learning models, a Generative
+			Adversarial Network (GAN) and a Convolutional Neural Network (CNN). The GAN model exhibited better performance, and was selected as the final model. <br><br>
 			For the ECE 2018 Design Fair, we developed an Android app that took portrait images of people, compressed them and displayed the regenerated image on different screens.</p>
 			<img src="https://hengyuechen.github.io/PosterMain.jpg" align="middle" height=500 width=800>
 		<ul>
@@ -26,6 +27,5 @@
         		<li><a href="https://hengyuechen.github.io/FinalReport.pdf">Project Final Report</a></li>
     		</ul>
 			</div>
-		</nav>
 	</body>
 </html>
