--- a/capstone.html
+++ b/capstone.html
@@ -16,7 +16,7 @@
 			<h2 align="left">Description</h2>
 			<p>The goal of the project was to explore how well Machine Learning techniques can regenerate data lost through JPEG image compression. It was completed as part of our final year design project requirements. We were able to evaluate two Machine Learning models, a Generative Adversarial Network (GAN) and a Convolutional Neural Network (CNN). The GAN model exhibited better performance, and was selected as the final model. <br><br>
 			For the ECE 2018 Design Fair, we developed an Android app that took portrait images of people, compressed them and displayed the regenerated image on different screens.</p>
-			<img src="https://hengyuechen.github.io/PosterMain.jpg" align="middle" height=700 width=100%>
+			<img src="https://hengyuechen.github.io/PosterMain.jpg" align="middle" height=70% width=100%>
 		<ul>
         		<li><a href="https://github.com/Rifdhan/image_data_regeneration_gan">GAN Model Repository</a></li>
 	        	<li><a href="https://github.com/hengyuechen/ECE496">CNN Model Repository</a></li>
